<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSchedule</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="signin">Sign In</string>
    <string name="createaccount">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name(*)</string>
    <string name="participant_name">Name</string>
    <string name="email">Email(*)</string>
    <string name="password">Password(*)</string>
    <string name="please_wait">Please wait...</string>
    <string name="username_empty">The username cannot be empty</string>
    <string name="email_invalid">The email address is invalid</string>
    <string name="password_length_should_be_6">Password length should be 6</string>
    <string name="create_account">Create Account</string>
    <string name="mobile">Mobile(*)</string>
    <string name="processing">Processing</string>
    <string name="create_acc_failure">Create account failure!</string>
    <string name="login_fail">Login fail!</string>
    <string name="title_email">Email</string>
    <string name="title_mobile">Mobile</string>
    <string name="participant_infor">Participant Info</string>

    <string-array name="menu_array">
        <item>Schedule</item>
        <item>Contact</item>
        <item>Activity</item>
        <item>Account</item>
    </string-array>

    <string name="add_activity">New Activity</string>
    <string name="edit_activity">Activity Information</string>

    <string-array name="alert_array">
        <item>None</item>
        <item>5 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>2 hours before</item>
        <item>1 day before</item>
        <item>2 day before</item>
        <item>On date of event</item>
    </string-array>
    <string-array name="repeat_array">
        <item>None</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every 2 weeks</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>
    <string-array name="timezone_array">
        <item>US/Samoa-(GMT-11:00) Samoa</item>
        <item>US/Hawaii-(GMT-10:00) Hawaii</item>
        <item>US/Alaska-(GMT-09:00) Alaska</item>
        <item>US/Pacific-(GMT-08:00) Pacific Time (US-Canada)</item>
        <item>US/Arizona-(GMT-07:00) Arizona</item>
        <item>US/Mountain-(GMT-07:00) Mountain Time (US-Canada)</item>
        <item>US/Central-(GMT-06:00) Central Time (US-Canada)</item>
        <item>US/Eastern-(GMT-05:00) Eastern Time (US-Canada)</item>
        <item>US/East-Indiana-(GMT-05:00) Indiana (East)</item>
        <item>Canada/Atlantic-(GMT-04:00) Atlantic Time (Canada)</item>
        <item>Canada/Newfoundland-(GMT-03:30) Newfoundland</item>
    </string-array>
    <string-array name="timezone_value_array">
        <item>-11.0</item>
        <item>-10.0</item>
        <item>-9.0</item>
        <item>-8.0</item>
        <item>-7.0</item>
        <item>-7.0</item>
        <item>-6.0</item>
        <item>-5.0</item>
        <item>-5.0</item>
        <item>-4.0</item>
        <item>-3.5</item>
    </string-array>

    <string name="set_end_date">Set End Date</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="next">Next</string>
    <string name="new_activity">Add Activity</string>
    <string name="activity_name">Activity name</string>
    <string name="remove_activity">Remove Activity</string>
    <string name="time_zone">Time Zone</string>
    <string name="alert">Alert</string>
    <string name="description">Description</string>
    <string name="repeat">Repeat</string>
    <string name="username_blank">Please enter your username</string>
    <string name="password_blank">Please enter your password</string>
    <string name="input_activity_name">Please enter activity name</string>
    <string name="input_activity_description">Please enter activity description</string>
    <string name="create_activity_error">Have an error occur when creating an activity. Please try again!</string>
    <string name="edit_activity_error">Have an error occur when editing an activity. Please try again!</string>
    <string name="add_participant">Add Participant</string>
    <string name="add_contact">New Contact</string>
    <string name="edit_participant">Contact Info</string>
    <string name="participant">Participant</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="on_duty">On Duty</string>
    <string name="add_schedule">New schedule</string>
    <string name="edit_schedule">Schedule Information</string>
    <string name="ok">OK</string>
    <string name="confirm_title">Are you sure to add </string>
    <string name="into">to</string>
    <string name="delete_activity">Are you sure you want to delete this activity and related schedules?</string>
    <string name="caution">Caution</string>
    <string name="activity">Activity</string>
    <string name="schedule">Schedule</string>
    <string name="account">Account</string>
    <string name="activity_description">Activity Description</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="delete_contact">Are you sure you want to delete</string>
    <string name="delete_contact_error">Have an error occur when deleting this contact</string>
    <string name="create_schedule_error">Have an error occur when creating schedule an activity. Please try again!</string>
    <string name="start_date_greater_end_date">End date must be less than or equal start date</string>
    <string name="delete_schedule">Are you sure you want to delete this activity and related schedules?</string>
    <string name="delete_activity_error">Delete activity error</string>
    <string name="delete_schedule_error">Delete schedule error</string>
    <string name="update_participant_error">Edit participant information error</string>
    <string name="add_participant_error">Add participant error</string>

    <string-array name="owner_infor_array">
        <item>Call</item>
        <item>Message</item>
        <item>Remove</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="participant_infor_array">
        <item>Call</item>
        <item>Message</item>
        <item>Cancel</item>
    </string-array>

    <string name="delete_participant">Delete partipant</string>
    <string name="your_contact">You can not delete yourself</string>
    <string name="today">Today</string>
    <string name="me">Me</string>
    <string name="all">All</string>

    <string-array name="onduty_member_infor_array">
        <item>Make Call</item>
        <item>Send Message</item>
        <item>Send Email</item>
        <item>Cancel</item>
    </string-array>

    <string name="remove_schedule">Remove Schedule</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="cannot_change_activity">You cannot modify this activity</string>
    <string name="contact">Contact</string>
    <string name="select_participant">Select Participant</string>
    <string name="have_no_activity_first">When you have already created an activity or </string>
    <string name="have_no_activity_second">you are participating in an activity created by </string>
    <string name="have_no_activity_third">someone else, you’ll see it here.</string>
    <string name="your_activity">Your activity</string>

    <string name="have_no_schedule_first">When you have already created a schedule or </string>
    <string name="have_no_schedule_second">you are participating in an activity created by </string>
    <string name="have_no_schedule_third">someone else, you’ll see it here.</string>
    <string name="your_schedule">Your schedule</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback_success">You sent feedback to us successfully</string>
    <string name="please_enter_feedback">Please enter your feedback</string>
</resources>