<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@color/bg_login_title_bar" >

        <TextView
            android:id="@+id/main_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/color_text_title_main"
            android:textSize="@dimen/text_name"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_left"
        android:background="@color/bg_login_title_bar"
        android:text="@string/signin"
        android:textColor="@color/color_text_title_main"
        android:textSize="@dimen/text_name" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_above="@id/btn_sign_in"
       android:layout_margin="@dimen/margin_left"
        android:background="@color/bg_login_title_bar"
        android:text="@string/createaccount"
        android:textColor="@color/color_text_title_main"
        android:textSize="@dimen/text_name" />

    <ImageView
        android:id="@+id/mainpage_iconimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_create_account"
        android:layout_below="@id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/mainpage_bigicon" 
        android:layout_marginTop="10dp"/>

</RelativeLayout>